Changes to be committed: 	modified:   canvas-pages/out/part-3.html 	modified:   canvas-pages/part-3.md 	modified:   notebooks/gcms.ipynb

--- a/notebooks/gcms.ipynb
+++ b/notebooks/gcms.ipynb
@@ -7,7 +7,9 @@
     "# Gas Chromatography\n",
     "## Learning Objectives\n",
     "- Explain the fundamental principles of gas chromatography and mass spectrometry as individual techniques and how they complement each other when combined.\n",
+    "- Compare and constrast a quadrupole mass filter and a time-of-flight mass analyzer in the context of GC-MS.\n",
     "- Describe the key components of a GC-MS instrument, including injection systems, columns, interfaces, ionization sources, mass analyzers, and detectors.\n",
+    "- Describe the process of using a spectral library for qualitative applications of GC-MS.\n",
     "- Evaluate the advantages, limitations, and appropriate applications of GC-MS compared to other analytical techniques."
    ]
   },
@@ -80,6 +82,7 @@
     "- [Benzene](https://webbook.nist.gov/cgi/cbook.cgi?Name=benzene&Units=SI&cMS=on)\n",
     "- [Toluene](https://webbook.nist.gov/cgi/cbook.cgi?Name=toluene&Units=SI&cMS=on)\n",
     "- [Cholesterol](https://webbook.nist.gov/cgi/cbook.cgi?Name=cholesterol&Units=SI&cMS=on)\n",
+    "- [Dichlorvos](https://webbook.nist.gov/cgi/cbook.cgi?ID=62-73-7&Units=SI)\n",
     "\n",
     "### Spectral Libraries\n",
     "\n",
@@ -95,7 +98,77 @@
     "    - Particularly strong in specialized organic compounds\n",
     "\n",
     "### Scoring Against Libraries \n",
-    "\n"
+    "\n",
+    "1. Direct Matching Factor (MF)\n",
+    "    - Calculates similarity between the unknown and library spectra\n",
+    "    - Based on a weighted dot-product algorithm\n",
+    "    - Scores range from 0-999, with higher scores indicating better matches\n",
+    "    - Scores >900 suggest excellent matches, 800-900 good matches, 700-800 fair matches\n",
+    "2. Reverse Matching Factor (RMF)\n",
+    "    - Similar to MF but ignores peaks present in the unknown but absent in library spectrum\n",
+    "    - Useful when the unknown spectrum contains contaminants or co-eluting compounds\n",
+    "    - Helps identify compounds within complex mixtures\n",
+    "3. Probability Score\n",
+    "    - Estimates likelihood that the match is correct\n",
+    "    - Based on statistical analysis of the similarity scores\n",
+    "    - Considers uniqueness of the spectral pattern\n",
+    "4. Retention Index Matching\n",
+    "    - When available, compares the experimental retention index to library values\n",
+    "    - Can significantly improve identification confidence when combined with spectral matching.\n",
+    "\n",
+    "The NIST MS Search software employs these algorithms in combination, typically presenting results ranked by match quality. The software also provides tools for spectrum interpretation, including identification of molecular ions, fragment predictions, and chemical structure correlation with fragmentation patterns.\n",
+    "Most modern GC-MS data systems incorporate the NIST matching algorithms with adjustable parameters to optimize search results for specific applications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quantitative Applications of GC-MS\n",
+    "\n",
+    "### Some examples\n",
+    "1. Environmental Analysis\n",
+    "    - Monitoring trace pollutants in air, water, and soil\n",
+    "    - Quantifying pesticides, PCBs, PAHs, and other persistent organic pollutants\n",
+    "    - EPA methods often specify GC-MS for regulatory compliance\n",
+    "2. Pharmaceutical Analysis\n",
+    "    - Drug substance purity determination\n",
+    "    - Residual solvent analysis\n",
+    "    - Impurity profiling and quantification\n",
+    "3. Forensic Toxicology\n",
+    "    - Quantification of drugs of abuse in biological matrices\n",
+    "    - Blood alcohol content determination\n",
+    "    - Postmortem toxicology screening\n",
+    "4. Food and Flavor Analysis\n",
+    "    - Quantifying pesticide residues\n",
+    "    - Determining fatty acid profiles\n",
+    "    - Measuring flavor components and off-flavors\n",
+    "5. Metabolomics\n",
+    "    - Targeted quantification of specific metabolites\n",
+    "    - Relative quantification in biomarker discovery\n",
+    "\n",
+    "### Data Handling\n",
+    "1. Calibration Approaches\n",
+    "   - External calibration: Using standard curves of analyte concentrations\n",
+    "   - Standard addition: Spiking samples with known amounts of target analytes\n",
+    "   - Isotope dilution: Using isotopically labeled analogs as internal standards (highest accuracy)\n",
+    "2. Ion Selection for Quantitation\n",
+    "    - Quantifier ions: Usually the most abundant or characteristic fragment ions\n",
+    "    - Qualifier ions: Secondary ions used to confirm identity (typically ion ratios must fall within ±20% of reference standards)\n",
+    "    - Molecular ion (M+) often avoided due to potential instability or low abundance in EI\n",
+    "    - Base peak (most intense fragment) commonly used as quantifier unless prone to interference\n",
+    "3. Mass Spectral Deconvolution\n",
+    "    - Automated deconvolution for resolving co-eluting compounds\n",
+    "    - Spectral subtraction algorithms to isolate target analyte signals from matrix background\n",
+    "    - Target compound algorithms that extract ion chromatograms from complex matrices\n",
+    "4. EI Fragmentation Considerations\n",
+    "    - Fragment ion stability assessment for quantitation\n",
+    "    - Accounting for isotope patterns (especially for halogenated compounds)\n",
+    "    - Rearrangement ions avoided for quantitation due to variable formation\n",
+    "5. Interference Management\n",
+    "    - Column bleed ions (m/z 73, 147, 207, 281, 355 for siloxane columns) excluded from quantitation\n",
+    "    - Common laboratory contaminant ions (phthalates, solvent impurities) identified and filtered\n",
+    "    - Mass resolution settings optimized to separate isobaric interferences"
    ]
   }
  ],
