Changes to be committed: 	modified:   notebooks/gcms.ipynb 	new file:   notebooks/images-lc-ms/4-butylbenzamide.png 	new file:   notebooks/images-lc-ms/4-hydroxybenzamide.png 	new file:   notebooks/images-lc-ms/dda.png 	modified:   notebooks/lc-ms.ipynb

--- a/notebooks/gcms.ipynb
+++ b/notebooks/gcms.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "### Gas Chromatography\n",
     "\n",
-    "The *retention factor* in gas chromatography is the ratio between the time that an analyte spends partitioned in the stationary phase to time that analyte spends in the carrier gas. Therefore, the analyte must for stable, gaseous vapors during experiments.\n",
+    "The *retention factor* in gas chromatography is the ratio between the time that an analyte spends partitioned in the stationary phase to time that analyte spends in the carrier gas. Therefore, the analyte must be stable as a gaseous vapor during experiments.\n",
     "- **Volatility**: Analytes must have sufficient vapor pressure at GC operating temperatures. Generally, analytes should have boiling points below approximately 400-450 °C to be analyzed by conventional GC.\n",
     "- **Thermal Stability**: Analytes must remain chemically stable at the temperatures required for vaporization and separation. Compounds that decompose or rearrange under heat are poor candidates.\n",
     "- **Molecular Weight**: Typically, GC works best for compounds with molecular weights below 500-600 Da. Larger molecules often have insufficient volatility.\n",
