Changes to be committed: 	modified:   canvas-pages/out/part-1.html 	modified:   canvas-pages/part-1.md 	new file:   notebooks/sp-images/10_ch03_Fig10.jpg 	new file:   notebooks/sp-images/33_ch02_UFig05.jpg 	new file:   notebooks/sp-images/35_ch02_UFig07.jpg 	modified:   notebooks/sp-opamps.ipynb 	modified:   notebooks/sp-transducers.ipynb

--- a/notebooks/sp-opamps.ipynb
+++ b/notebooks/sp-opamps.ipynb
@@ -7,14 +7,24 @@
     "# Operational Amplifiers\n",
     "\n",
     "## Suggested Problems\n",
-    "- 3-1, 3-4, Example 3-1"
+    "### Question 3-1 from Skoog *Principles of Instrumental Analysis*.\n",
+    "> An operational amplifier has output voltage limits of +13 V and -14 V when used with a $\\pm 15 V$ power supply. If the amplifier is used as a comparator, but what amount does $v_+$ have to exceed $v_-$ and $v_-$ have to exceed $v_+$, for the amplifier to be at limit if the open-loop gain A is:\n",
+    "### Question 3-4 from Skoog *Principles of Instrumental Analysis*.\n",
+    "> An operational amplifier with an open-loop gain of $1.0 \\cdot 10^5$ and an input resistance of $1.0 \\cdot 10^{12}$ is used in the voltage follower circuit of Figure 3-5. A voltage source is to be measured with a voltage of $2.0 \\, V$ and a source resistant of $10.0 K\\Omega$. Find the percentage relative error in the follower output voltage due to (a) the finite gain of the amplifier and (b) the loading of the voltage source.\n",
+    "### Example 3-1 from Skoog *Principles of Instrumental Analysis*.\n",
+    "> Assume that $R_f$ in Fiigure 3-10 is 1 $M\\Omega$, the internal resistance of the phototube is $5.0 \\cdot 10^4$ $\\Omega$, asnd the ampllifer open-loop gain is $1.0 \\cdot 10^5$. Calculate the relative error in the current measurement that results from the presence of the measuring circuit.\n",
+    "\n",
+    "![A circuit using an operational amplifier to measure a small photocurrent.](./sp-images/10_ch03_Fig10.jpg)\n",
+    "\n",
+    "> **Figure 3-10.** Applicaiton of an operation ampllifer current follower to the measure of a small photocurrent, $I_x$.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3-1\n",
+    "## Question 3-1\n",
     "\n",
     "> An operational amplifier has output voltage limits of +13 V and -14 V when used with a $\\pm 15 V$ power supply. If the amplifier is used as a comparator, but what amount does $v_+$ have to exceed $v_-$ and $v_-$ have to exceed $v_+$, for the amplifier to be at limit if the open-loop gain A is:\n",
     "\n",
@@ -47,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3-4\n",
+    "## Question 3-4\n",
     "\n",
     "> An operational amplifier with an open-loop gain of $1.0 \\cdot 10^5$ and an input resistance of $1.0 \\cdot 10^{12}$ is used in the voltage follower circuit of Figure 3-5. A voltage source is to be measured with a voltage of $2.0 \\, V$ and a source resistant of $10.0 K\\Omega$. Find the percentage relative error in the follower output voltage due to (a) the finite gain of the amplifier and (b) the loading of the voltage source.\n",
     "\n",
@@ -68,6 +78,22 @@
     "The $IR$ drop across the source resistance is:\n",
     "\n",
     "$$ 1.99999998 \\cdot 10^{-12} \\cdot 10^4 \\Omega = 20 \\, nV $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 3-1 \n",
+    "> Assume that $R_f$ in Fiigure 3-10 is 1 $M\\Omega$, the internal resistance of the phototube is $5.0 \\cdot 10^4$ $\\Omega$, asnd the ampllifer open-loop gain is $1.0 \\cdot 10^5$. Calculate the relative error in the current measurement that results from the presence of the measuring circuit.\n",
+    "\n",
+    "From [Equation 3.3.5](https://chem.libretexts.org/Bookshelves/Analytical_Chemistry/Instrumental_Analysis_(LibreTexts)/03%3A_Operational_Amplifiers_in_Chemical_Instrumentation_(TBD)/3.03%3A_Amplification_and_Measurement_of_Signals), the input resistance of the current follower is:\n",
+    "\n",
+    "$R_m = \\frac{R_r}{A_{op}} = \\frac{1 \\cdot 10^6}{1 \\cdot 10^5} = 10 \\: \\Omega$\n",
+    "\n",
+    "From [Equation 2.2.23](https://chem.libretexts.org/Bookshelves/Analytical_Chemistry/Instrumental_Analysis_(LibreTexts)/02%3A_Electrical_Components_and_Circuits/2.02%3A_Direct_Current_Circuits_and_Measurements), the percent error in the reported current is:\n",
+    "\n",
+    "$E_x = -\\frac{R_m}{R_m+R_l} \\cdot 100 = \\frac{-10 \\: \\Omega}{5.0 \\cdot 10^4  \\: \\Omega + 10 \\: \\Omega} = -0.02% $"
    ]
   }
  ],
