--- a/notebooks/sp-transducers.ipynb
+++ b/notebooks/sp-transducers.ipynb
@@ -7,7 +7,47 @@
     "# Transducers, Electrical Components, and Circuits\n",
     "\n",
     "## Suggest Problems\n",
-    "- 2-1, 2-6, 2-10, 2-14, 2-15"
+    "### Question 2-1 from Skoog *Principles of Instrumental Analysis*.\n",
+    "\n",
+    "![A diagram of a circuit with a power supply and a voltage divider](./sp-images/33_ch02_UFig05.jpg)\n",
+    "> For assembling this voltage divider, two of each of the following resistors are available: $250 \\: \\Omega$, $500 \\: \\Omega$, and $1.00 \\: K\\Omega$.\n",
+    "\n",
+    "> **(a)** Propose a combination of resistors that would yield tha indicated voltages.\n",
+    "\n",
+    "> **(b)** *IR* drop across $R_3$. \n",
+    "\n",
+    "> **(c)** What current would be drawn from the source?\n",
+    "\n",
+    "> **(d)** What power is dissipated by the circuit?\n",
+    "\n",
+    "### Question 2-6 from Skoog *Principles of Instrumental Analysis*.\n",
+    "\n",
+    "![A diagram of a resistor circuit, with resistors in series and in parallel.](./sp-images/35_ch02_UFig07.jpg)\n",
+    "\n",
+    "> For this circuit, calculate:\n",
+    "\n",
+    "> **(a)** The power dissipated between points 1 and 2.\n",
+    "\n",
+    "> **(b)** The current drawn from the source.\n",
+    "\n",
+    "> **(c)** The voltage drop across resistor $R_A$.\n",
+    "\n",
+    "> **(d)** The voltage drop across resistor $R_D$.\n",
+    "\n",
+    "> **(e)** The potential difference between points 5 and 4.\n",
+    "\n",
+    "### Question 2-10 from Skoog *Principles of Instrumental Analysis*.\n",
+    "> The current in a circuit is to be determined by measuring the voltage drop across a precision resistor in series with the circuit.\n",
+    "\n",
+    "> **(a)** What should be the resistance of the resistor in ohms if 1.00 V corresponds to 20 $\\mu A$?\n",
+    "\n",
+    "> **(b)** What must be the resistance of the voltage-measuring device if the error in the current measurement is to be less than 2.0% relative.\n",
+    "\n",
+    "### Question 2-14 from Skoog *Principles of Instrumental Analysis*.\n",
+    "> How long would it take to discharge a 0.025 $\\mu F$ capacitor to 1% of its full charge through a resistance of: **(a)** 10 $M\\Omega$, **(b)** 1 $M\\Omega$, or **(c)** 1 $k\\Omega$.\n",
+    "\n",
+    "### Question 2-15 from Skoog *Principles of Instrumental Analysis*.\n",
+    "> Calculate the time constants of the *RC* circuits in Question 2-15.\n"
    ]
   },
   {
