Changes to be committed: 	modified:   notebooks/sp-opamps.ipynb

--- a/notebooks/sp-opamps.ipynb
+++ b/notebooks/sp-opamps.ipynb
@@ -87,7 +87,7 @@
     "## Example 3-1 \n",
     "> Assume that $R_f$ in Fiigure 3-10 is 1 $M\\Omega$, the internal resistance of the phototube is $5.0 \\cdot 10^4$ $\\Omega$, asnd the ampllifer open-loop gain is $1.0 \\cdot 10^5$. Calculate the relative error in the current measurement that results from the presence of the measuring circuit.\n",
     "\n",
-    "From [Equation 3.3.5](\"https://chem.libretexts.org/Bookshelves/Analytical_Chemistry/Instrumental_Analysis_(LibreTexts)/03%3A_Operational_Amplifiers_in_Chemical_Instrumentation_(TBD)/3.03%3A_Amplification_and_Measurement_of_Signals\"), the input resistance of the current follower is:\n",
+    "From [Equation 3.3.5](https://chem.libretexts.org/Bookshelves/Analytical_Chemistry/Instrumental_Analysis_(LibreTexts)/03%3A_Operational_Amplifiers_in_Chemical_Instrumentation_(TBD)/3.03%3A_Amplification_and_Measurement_of_Signals), the input resistance of the current follower is:\n",
     "\n",
     "$R_m = \\frac{R_r}{A_{op}} = \\frac{1 \\cdot 10^6}{1 \\cdot 10^5} = 10 \\: \\Omega$\n",
     "\n",
