Changes to be committed: 	modified:   canvas-pages/main.md 	modified:   canvas-pages/out/main.html 	new file:   notebooks/op-amp-images/06__ch02_Fig04.jpg 	modified:   notebooks/opamps.ipynb

--- a/notebooks/opamps.ipynb
+++ b/notebooks/opamps.ipynb
@@ -13,7 +13,7 @@
     "- Explain the benefit the high input impedance of an operational amplifier when used as a transducer of a chemical measurement.\n",
     "\n",
     "## Suggested Problems\n",
-    "- 3-1, 3-4, Example 3-1"
+    "- [Suggested Problems and Solutions](./sp-opamps.ipynb)"
    ]
   },
   {
@@ -22,14 +22,47 @@
    "source": [
     "## Electricity and Chemistry\n",
     "\n",
+    "### Fundamentals\n",
+    "\n",
     "$$ q = \\eta \\cdot F $$\n",
     "\n",
     "where $q$ is charge (units of Coulombs, $C$), $\\eta$ is moles of electrons, and $F$ is Faraday's constant ($9.649 \\cdot 10^4 \\, C \\cdot mol^{-1}$).\n",
     "\n",
     "$$ work = E \\cdot q $$\n",
-    "$$ 1 \\, V = 1 \\, J \\cdot C^{-1} $$\n",
+    "$$ 1 \\: V = 1 \\: J \\cdot C^{-1} $$\n",
     "\n",
-    "where $work$ has units of Joules and $E$ has units of volts."
+    "where $work$ has units of Joules and $E$ has units of volts.\n",
+    "\n",
+    "### Transducing Signals\n",
+    "\n",
+    "From [last class](./transducers.ipynb):\n",
+    "\n",
+    "> Chemical instruments include an input transducer, which is a device that converts chemical or physical information about an analyte into an electrical signal, such as a current or voltage.\n",
+    "\n",
+    "When analyzing small molar quantities of analyte, transducers generate correspondingly small voltages or currents, *e.g.*, voltages in the microvolt to millivolt range. These weak signals have limited current-sourcing capability.\n",
+    "\n",
+    "Measuring a voltage or a current will draw current from the signal source, creating a voltage divider effect between the transducer's internal resistance and the instrument's input impedance. This current draw causes the measured voltage to drop below the actual transduced signal. This measurement error called \"loading\" the signal source.\n",
+    "\n",
+    "![Three circuit diagrams showing how the input impedence of a DVM creates a loading error.](./op-amp-images/06__ch02_Fig04.jpg)\n",
+    "\n",
+    "**Figure 2-4 from Skoog.** Applications of a digital volt meter (DVM.) (a) Measurement of the output $V_x$ of a voltage source. (b) Measurement of current $I_x$ thourgh a load resistor $R_L$. (c) Measurement of resistance $R_X$ of a resistive circuit element.\n",
+    "\n",
+    "From Equation 2.2.17 in Harvey [link](https://chem.libretexts.org/Bookshelves/Analytical_Chemistry/Instrumental_Analysis_(LibreTexts)/02%3A_Electrical_Components_and_Circuits/2.02%3A_Direct_Current_Circuits_and_Measurements):\n",
+    "\n",
+    "$V_m = V_x \\cdot \\frac{R_m}{R_m + R_x}$\n",
+    "\n",
+    "and the measurement error is:\n",
+    "\n",
+    "$E_x = \\frac{V_m - V_x}{V_x} \\cdot 100 \\% = \\frac{R_m}{R_m + R_x}  \\cdot 100 \\% $\n",
+    "\n",
+    "Therefore, if $R_m \\approx R_x$, then $E_x \\approx 50 \\%$!\n",
+    "\n",
+    "However, if $R_m \\gg R_x$, then \n",
+    "\n",
+    "$V_m = V_x \\cdot \\frac{R_m}{R_m + R_x} \\approx  V_x \\cdot \\frac{R_m}{R_m} \\approx  V_x$\n",
+    "\n",
+    "*The accuracy of chemical measurements benefits greatly from input transduces that have very high input impedance, which is turn reduces the loading error.* Operational amplifiers have very high input impedance (typically $10^6 - 10^{12} \\: \\Omega$). Therefore, these devices draw negligible current from the transducer, preserving the original signal voltage while simultaneously providing gain to amplify the weak signal to a measurable level. Essentially, op-amps act as high-impedance buffers that faithfully capture small signals without distorting them, then amplify these signals for accurate quantitation. \n",
+    "\n"
    ]
   },
   {
@@ -48,7 +81,7 @@
     "$$ v_{s} = v_+ - v_- $$\n",
     "where $v_s$ in the input voltage difference, $v_+$ is the inverting input, and $v_-$ is the noninverting input to the operational amplifier.\n",
     "$$ v_{out} = A \\cdot v_s $$\n",
-    "where $A$ is the **gain** of the amplifier, which is typically $10^5 - 10^6$. This is maintained while $-PS < v_o < +PS$.\n",
+    "where $A$ is the **gain** of the amplifier, which is typically $10^5 - 10^6$. This is maintained while $-PS < v_o < +PS$ and is often referred to as the open-loop gain.\n",
     "\n",
     "![Comparator](./op-amp-images/04_ch03_Fig04.jpg)\n",
     "\n",
