Changes to be committed: 	modified:   canvas-pages/out/part-1.html 	modified:   canvas-pages/part-1.md 	modified:   notebooks/analog-and-digital-data.ipynb 	modified:   notebooks/sp-analog-and-digital-data.ipynb

--- a/notebooks/analog-and-digital-data.ipynb
+++ b/notebooks/analog-and-digital-data.ipynb
@@ -12,9 +12,7 @@
     "- Compare binary, decimal, and binary-coded decimal representations in terms of storage size and ease of math operations.\n",
     "- For an analog-to-digital convertor with a given full-scale value, bit resolution, and analog value, calculate the resulting digital signal.\n",
     "- Based on the least significant bit of an analog-to-digital converter, estimate the relative uncertainty of a digitized value.\n",
-    "- Select an appropriate sampling frequency based on the signal to be digitized in a specific measurement. \n",
-    "## Suggested Problems: \n",
-    "- 4-1, 4-2, 4-3, 4-7, 4-8, 4-9, 4-11, 4-12"
+    "- Select an appropriate sampling frequency based on the signal to be digitized in a specific measurement. "
    ]
   },
   {
@@ -67,7 +65,7 @@
     "For the following example:\n",
     "- How many quantization levels are there in this plot? \n",
     "- What is the resolution of this digitizer in bits?\n",
-    "- What is the reoslution of this digitizer in volts?\n",
+    "- What is the resolution of this digitizer in volts?\n",
     "- For an 8-bit digitizer with a FSR of 5 V, what bit code would a voltage of 0.1823672 yield?\n",
     "\n",
     "![ADC](./adc-figures/ADC_voltage_resolution.svg)\n",
