--- a/notebooks/sp-analog-and-digital-data.ipynb
+++ b/notebooks/sp-analog-and-digital-data.ipynb
@@ -15,12 +15,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "# Analog and Digital Data\n",
     "\n",
     "## Suggested Problems: \n",
     "\n",
-    "- 4-1, 4-2, 4-3, 4-7, 4-8, 4-9, 4-11, 4-12"
+    "### Question 4-1 from Skoog *Principles of Instrumental Analysis*. \n",
+    "\n",
+    "> Convert each of the following decimal numbers to its binary equivalent. **(a)** $37$, **(b)** $93$, **(c)** $129$, and **(d)** $355$.\n",
+    "\n",
+    "### Question 4-2 from Skoog *Principles of Instrumental Analysis*.\n",
+    "\n",
+    "> Convert each of the decimal numbers in Problem 4-1 into BCD numbers. **(a)** $37$, **(b)** $93$, **(c)** $129$, and **(d)** $355$.\n",
+    "\n",
+    "### Question 4-3 from Skoog *Principles of Instrumental Analysis*.\n",
+    "\n",
+    "> Based on the results of problems 4-1 and 4-2, which is more efficient in expressing decimal numbers in the fewest number of bits, binary or BCD? Why is the less efficient coding scheme still useful.\n",
+    "\n",
+    "### Question 4-7 from Skoog *Principles of Instrumental Analysis*.\n",
+    "\n",
+    "> Perform the following calculations using binary numbers and convert the results back to decimal. **(a)** $8 +5$, **(b)** $339 + 25$, **(c)** $47+16$, **(d)** $2 \\times 9$. \n",
+    "\n",
+    "### Question 4-8 from Skoog *Principles of Instrumental Analysis*.\n",
+    "\n",
+    "> Three ADCs all have a range of 0 to 12 V and a digitization uncertainty of $\\pm 1$ LSB. What is the maximum uncertainty of a 10-V signal in the converts have: **(a)** 8 bits, **(b)** 12 bits, and **(c)** 16 bits.\n",
+    "\n",
+    "### Question 4-9 from Skoog *Principles of Instrumental Analysis*.\n",
+    "\n",
+    "> Repeat problem 4-8 if a 1.2 V signal is being digitized with the same three ADCs and the input signal is (a) not amplified and (b) amplified by 10 to bring it to full scale.\n",
+    "\n",
+    "### Question 4-11 from Skoog *Principles of Instrumental Analysis*.\n",
+    "\n",
+    "> ADCs digitize at different rates. What conversion rate is required if a chromatographic peak is to be sampled and digitized 25 times between the first positive deflection from the baseline until the peak returns to the baseline? The total baseline-to-baseline time is: **(a)** 20 s or \n",
+    "**(b)** 1 s.\n",
+    "\n",
+    "### Question 4-12 from Skoog *Principles of Instrumental Analysis*.\n",
+    "\n",
+    "> According to the Nyquist sampling criterion, a signal must be digitized at a rate at least twice that of the highest frequency in the signal to avoid a sampling error. If a particular 12-bit ADC has a conversion time of $5 \\, \\mu s$, what is the highest frequency that can be accurately digitized while satisfying the Nyquist criterion?\n"
    ]
   },
   {
