--- a/notebooks/uv-vis.ipynb
+++ b/notebooks/uv-vis.ipynb
@@ -25,8 +25,8 @@
     "- [Quantitative Analysis by Absorption Measurements](https://chem.libretexts.org/Bookshelves/Analytical_Chemistry/Instrumental_Analysis_(LibreTexts)/14%3A_Applications_of_Ultraviolet_Visible_Molecular_Absorption_Spectrometry/14.04%3A_Quantitative_Applications)\n",
     "- [Photometric Titrations](https://chem.libretexts.org/Bookshelves/Analytical_Chemistry/Instrumental_Analysis_(LibreTexts)/14%3A_Applications_of_Ultraviolet_Visible_Molecular_Absorption_Spectrometry/14.05%3A_Photometric_Titrations)\n",
     "### Suggested Problems\n",
-    "- Need to update. \n",
-    "- Previous year: Skoog 13-1, 13-8, 13-9, 14-4, 14-8, 14-10"
+    "- [Suggested Problems](https://github.com/mfbush/instrumental-analysis/blob/main/suggested-problems/sp-uv-vis.md)\n",
+    "- [Solutions](https://github.com/mfbush/instrumental-analysis/blob/main/suggested-problems/sp-uv-vis-solutions.md)"
    ]
   },
   {
@@ -118,9 +118,12 @@
     "- Beer's law is for monochromatic light. \n",
     "- *Reflect:* Based on what you learned last time, to what extent is this true for different illumination schemes?\n",
     "\n",
-    "![Effect of Polychromatic Radiation](./images-uv-vis/06_ch13_Fig04.jpg)\n",
+    "![Effect of Polychromatic Radiation](./images-uv-vis/07_ch13_Fig05.jpg)\n",
     "\n",
-    "**Figure 2.** The effect of Deviations from Beer's law with polychromatic radiation. From Skoog Figure 13-4.\n",
+    "**Figure 2.** The effect of polychromatic radiation on Beer's law. The absorptivity of the analytze is nearly constant over Band A from the source (*top*) and the corresponding Beer's law plot gives a linear relationship (*bottom*). In contrast, the absorptivity of the analytze changes substantially over Band B from the source (*top*) and the corresponding Beer's law plot gives a nonlinear relationship (*bottom*).\n",
+    "\n",
+    "\n",
+    "  Deviations from Beer's law with polychromatic radiation. From Skoog Figure 13-5.\n",
     "\n",
     "### Stray Light\n",
     "- *Reflect:* Based on the relationship between absorbance and transmission, will stray light have a great impact on relative transparent samples or relatively opaque samples? "
