Changes to be committed: 	modified:   notebooks/molecular-luminescence.ipynb

--- a/notebooks/molecular-luminescence.ipynb
+++ b/notebooks/molecular-luminescence.ipynb
@@ -14,8 +14,9 @@
     "- Sketch block diagrams for typical instruments for luminescence measurements.\n",
     "- Describe molecular probes and luminescence systems.\n",
     "\n",
-    "## Suggested Problems\n",
-    "- 15-1, 15-3, 15-5, 15-7, 15-9, 15-10"
+    "### Suggested Problems\n",
+    "- [Suggested Problems](https://github.com/mfbush/instrumental-analysis/blob/main/suggested-problems/sp-luminescence.md)\n",
+    "- [Solutions](https://github.com/mfbush/instrumental-analysis/blob/main/suggested-problems/sp-luminescence-solutions.md)"
    ]
   },
   {
@@ -25,17 +26,7 @@
     "## Molecular Luminescence\n",
     "\n",
     "**Molecular luminescence** encompasses three related methods (*from Skoog*):\n",
-    "> **fluorescence**, **phosphorescence**, and **chemiluminescence**. In each of these methods, molecules of the analyte are excited to produce a species whose emission spectrum provides information for qualitative or quantitative analysis.  \n",
-    "\n",
-    "## Luminescence Assays Can Offer Higher Performance than Absorbance Assays  \n",
-    "\n",
-    "Luminescence measurements offer two key advantages relative to absorbance-based measurements:\n",
-    "\n",
-    "- *Sensitivity*: Luminescence causes an increase in signal relative to a dark background, rather than a decrease in signal relative to bright background. Luminesce-based assays are often up to 1000 fold more sensitive than absorbance-based assays.\n",
-    "- *Dynamic range*: Luminescence intensity is directly proportional to concentration, without the logarithmic relationship of absorbance. Luminesce-based assays often exhibit 4-6 orders of magnitude of linear dynamic range, whereas absorbance-based assays often exhibit only 2-3 orders of magnitude of linear dynamic range.\n",
-    "    - *Linear dynamic range* is the concentration range over which instrument response is directly proportional to analyte concentration, typically expressed as orders of magnitude between the limit of quantitation and where the response deviates from linearity.\n",
-    "  \n",
-    "Luminescence measurements also benefit from greater *selectivity*, which we'll discus later."
+    "> **fluorescence**, **phosphorescence**, and **chemiluminescence**. In each of these methods, molecules of the analyte are excited to produce a species whose emission spectrum provides information for qualitative or quantitative analysis.  "
    ]
   },
   {
@@ -86,6 +77,21 @@
     "- *Energy source*: Chemiluminescence uses chemical reaction energy; photoluminescence requires light absorption\n",
     "- *Duration*: Chemiluminescence continues as long as reactants remain; photoluminescence depends on continued light excitation (fluorescence) or triplet state lifetime (phosphorescence)\n",
     "- *Wavelength control*: The emission wavelength in chemiluminescence is fixed by the reaction energetics. The emission wavelength in photoluminescence depends on the electronic properties of the analyte and the excitation wavelength."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Luminescence Assays Can Offer Higher Performance than Absorbance Assays  \n",
+    "\n",
+    "Luminescence measurements offer two key advantages relative to absorbance-based measurements:\n",
+    "\n",
+    "- *Sensitivity*: Luminescence causes an increase in signal relative to a dark background, rather than a decrease in signal relative to bright background. Luminesce-based assays are often up to 1000 fold more sensitive than absorbance-based assays.\n",
+    "- *Dynamic range*: Luminescence intensity is directly proportional to concentration, without the logarithmic relationship of absorbance. Luminesce-based assays often exhibit 4-6 orders of magnitude of linear dynamic range, whereas absorbance-based assays often exhibit only 2-3 orders of magnitude of linear dynamic range.\n",
+    "    - *Linear dynamic range* is the concentration range over which instrument response is directly proportional to analyte concentration, typically expressed as orders of magnitude between the limit of quantitation and where the response deviates from linearity.\n",
+    "  \n",
+    "Luminescence measurements also benefit from greater *selectivity*, which we'll discus later."
    ]
   },
   {
